--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Threads Web</title>
+  <title>Pawster</title>
+  <meta name="description" content="Pawster social threads web app" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body class="h-full bg-neutral-950 text-neutral-100 antialiased">
