--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Pawster social threads web app" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
-  <body class="h-full bg-neutral-950 text-neutral-100 antialiased">
+  <body class="h-full antialiased">
     <div id="root" class="h-full"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
