--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pawster</title>
   <meta name="description" content="Pawster social threads web app" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/web/public/logo.png" />
   </head>
   <body class="h-full antialiased">
     <div id="root" class="h-full"></div>
